# AI_Engineering

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW03/eda-cli/src/eda_cli/: core.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py
homeworks/HW05/: HW05.ipynb  pyproject.toml
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
