[project]
name = "hw05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.19",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "tornado>=6.5.4",
]
